--- a/print.html
+++ b/print.html
@@ -145,7 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1>Zcash 5.5.0
+                        <h1>Zcash 5.5.1
 <img align="right" width="120" height="80" src="doc/imgs/logo.png"></h1>
 <h2 id="what-is-zcash"><a class="header" href="#what-is-zcash">What is Zcash?</a></h2>
 <p><a href="https://z.cash/">Zcash</a> is an implementation of the &quot;Zerocash&quot; protocol.
@@ -247,6 +247,7 @@ time, and may shift due to changes in network solution power.</p>
 <tr><td>5.5.0-rc2</td><td>2023-04-25</td><td>2193300</td><td>2023-08-15</td></tr>
 <tr><td>5.5.0-rc3</td><td>2023-04-27</td><td>2195224</td><td>2023-08-17</td></tr>
 <tr><td>5.5.0</td><td>2023-04-27</td><td>2196024</td><td>2023-08-17</td></tr>
+<tr><td>5.5.1</td><td>2023-05-16</td><td>2217487</td><td>2023-09-05</td></tr>
 </tbody></table>
 </div><!-- RELEASE_SCRIPT_END_MARKER -->
 <div style="break-before: page; page-break-before: always;"></div><h1 id="platform-support"><a class="header" href="#platform-support">Platform Support</a></h1>
@@ -262,7 +263,6 @@ be removed from tier 1. These dates are subject to change.</p>
 <div class="table-wrapper"><table><thead><tr><th>target</th><th>OS</th><th>End of Support</th></tr></thead><tbody>
 <tr><td><code>x86_64-pc-linux-gnu</code></td><td>Debian 10</td><td>June 2024</td></tr>
 <tr><td></td><td>Debian 11</td><td>June 2026</td></tr>
-<tr><td></td><td>Ubuntu 18.04</td><td>April 2023</td></tr>
 <tr><td></td><td>Ubuntu 20.04</td><td>April 2025</td></tr>
 </tbody></table>
 </div>
@@ -284,6 +284,7 @@ require builds or tests to pass, so these may or may not work. Official builds a
 available.</p>
 <div class="table-wrapper"><table><thead><tr><th>target</th><th>OS</th><th>notes</th></tr></thead><tbody>
 <tr><td><code>x86_64-pc-linux-gnu</code></td><td>Arch</td><td></td></tr>
+<tr><td></td><td>Ubuntu 22.04</td><td></td></tr>
 <tr><td><code>x86_64-unknown-freebsd</code></td><td>FreeBSD</td><td></td></tr>
 <tr><td><code>x86_64-w64-mingw32</code></td><td>Windows</td><td>64-bit MinGW</td></tr>
 <tr><td><code>x86_64-apple-darwin16</code></td><td>macOS 10.14+</td><td></td></tr>
